# qa_guru_python_4_17

./: .gitignore  pyproject.toml
