[tool.poetry]
name = "qa-guru-python-4-17"
version = "0.1.0"
description = ""
authors = ["Stanislav < oz3r@mail.ru>"]
readme = "README.md"
packages = [{include = "qa_guru_python_4_17"}]

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0b17"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
